css fix for select focus issue and z-index issues all over pages

--- a/scss/components/_blue-select.scss
+++ b/scss/components/_blue-select.scss
@@ -5,4 +5,13 @@
     border-radius: 5px;
     height: 35px;
     color: #fff;
+
+    &:focus{
+    	border: 1px solid #4F637F;
+    	outline: none;
+    }
+
+    &:active{
+    	border: 1px solid #4F637F;
+    }
 }
