--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -29,5 +29,6 @@
 	  position: absolute;
 	  top: 5px;
 	  left: 10px;
+	  cursor: pointer;
 	}
 }
